initial transfer of old portfolio

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,21 @@
-.App {
-  text-align: center;
+/*.App {*/
+/*  text-align: center;*/
+/*}*/
+
+#root {
+    padding: 0;
+    margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App {
+    padding: 0;
+    margin: 0;
 }
+
+/*.App-logo {*/
+/*  height: 40vmin;*/
+/*  pointer-events: none;*/
+/*}*/
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,20 +23,20 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+/*.App-header {*/
+/*  background-color: #282c34;*/
+/*  min-height: 100vh;*/
+/*  display: flex;*/
+/*  flex-direction: column;*/
+/*  align-items: center;*/
+/*  justify-content: center;*/
+/*  font-size: calc(10px + 2vmin);*/
+/*  color: white;*/
+/*}*/
 
-.App-link {
-  color: #61dafb;
-}
+/*.App-link {*/
+/*  color: #61dafb;*/
+/*}*/
 
 @keyframes App-logo-spin {
   from {
@@ -35,4 +45,301 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* copied straight from old site - requires refactor */
+/*ff9900 nice orange :)*/
+
+body {
+    margin:0px;
+}
+
+.white-block {
+    background:#fff;
+    width:60%;
+    padding:7% 20% 10% 20%;
+    color:#823A9C;
+}
+
+h1 {
+    text-align:center;
+    font-size:80px;
+    font-family:'wire one', serif;
+    font-weight:normal;
+}
+
+p {
+    font-size:20px;
+    font-family:'Raleway', serif;
+}
+
+.bg-dark {
+    background-color: #000;
+    /*background-color: #212529;*/
+}
+
+.bg-black {
+    background-color: #000;
+    color: white;
+}
+
+.profile-pic {
+    object-fit: cover;
+    height: 250px;
+    width: auto;
+}
+
+.curved-div svg {
+    display: block;
+}
+
+.fab, .far, .fas {
+    color: white;
+}
+
+.custom-li {
+    color: black;
+}
+
+.wave-black-top {
+    background-color: black;
+}
+
+.portfolio-image-div {
+    object-fit: cover;
+    width: 100%;
+    height: 250px;
+}
+
+.card-img-top {
+    object-fit: cover;
+    width: 100%;
+    height: 250px;
+}
+/* Skew */
+.skew-cc{
+    width:100%;
+    height:100px;
+    position:absolute;
+    left:0px;
+    background: linear-gradient(to right bottom, #000000 49%, #fff 50%), linear-gradient(-50deg, #ffffff 16px, #000 0);
+}
+
+.skew-c{
+    width:100%;
+    height:100px;
+    position:absolute;
+    left:0px;
+    background: linear-gradient(to left bottom, #fff 49%, #000000 50%);
+}
+
+.skew-c-white{
+    width:100%;
+    height:100px;
+    position:absolute;
+    left:0px;
+    background: linear-gradient(to left bottom, #000 49%, #fff 50%);
+}
+
+.colour-block {
+    background:#000;
+    /*background:#823A9C;*/
+    width:100%;
+    padding:7% 20% 10% 20%;
+    color:#fff;
+}
+
+.colour-block-small {
+    background:#000;
+    /*background:#823A9C;*/
+    width:100%;
+    padding:12% 20% 2% 20%;
+    color:#fff;
+}
+
+.colour-block-white {
+    background:#ffffff;
+    /*background:#823A9C;*/
+    width:100%;
+    padding:7% 20% 1% 20%;
+    color:#000;
+}
+
+.firstcharacter {
+    color: #000;
+    float: left;
+    font-family: Georgia;
+    font-size: 75px;
+    line-height: 60px;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 3px;
+}
+
+
+/* Block quote*/
+
+html {
+    background: #eff0ef;
+}
+
+.testimonial-quote {
+    font-size: 16px;
+}
+
+.testimonial-quote blockquote {
+    /* Negate theme styles */
+    border: 0;
+    margin: 0;
+    padding: 0;
+
+    background: none;
+    color: gray;
+    font-family: Georgia, serif;
+    font-size: 1.5em;
+    font-style: italic;
+    line-height: 1.4 !important;
+    margin: 0;
+    position: relative;
+    text-shadow: 0 1px white;
+    z-index: 600;
+}
+
+.testimonial-quote blockquote * {
+    box-sizing: border-box;
+}
+
+.testimonial-quote blockquote p {
+    color: #75808a;
+    line-height: 1.4 !important;
+}
+
+.testimonial-quote blockquote p:first-child:before {
+    content: '\201C';
+    color: #81bedb;
+    font-size: 7.5em;
+    font-weight: 700;
+    opacity: .3;
+    position: absolute;
+    top: -.4em;
+    left: -.2em;
+    text-shadow: none;
+    z-index: -300;
+}
+
+.testimonial-quote img {
+    border: 3px solid #9CC1D3;
+    border-radius: 50%;
+    display: block;
+    width: 120px;
+    height: 120px;
+    position: absolute;
+    top: -.2em;
+    left: 0;
+}
+
+.testimonial-quote cite {
+    color: gray;
+    display: block;
+    font-size: .8em;
+}
+
+.testimonial-quote cite span {
+    color: #5e5e5e;
+    font-size: 1em;
+    font-style: normal;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-shadow: 0 1px white;
+}
+
+.testimonial-quote {
+    position: relative;
+}
+
+.testimonial-quote .quote-container {
+    padding-left: 160px;
+    padding-bottom: 50px;
+}
+
+.testimonial-quote.right .quote-container {
+    padding-left: 0;
+    padding-right: 160px;
+}
+
+.testimonial-quote.right img {
+    left: auto;
+    right: 0;
+}
+
+.testimonial-quote.right cite {
+    text-align: right;
+}
+
+/* Modals */
+ul.fa-ul li a {
+    text-decoration: none;
+}
+
+
+@media only screen and (max-width: 600px) {
+    #main-article {
+        padding-top: 12%;
+    }
+    #profile-pic-holder {
+        width: 100%;
+    }
+
+    .profile-image {
+        object-fit: cover;
+        width: 100%;
+        height: 250px;
+    }
+
+    h1 {
+        padding-top: 20%;
+        text-align:center;
+        font-size:48px;
+        font-family:'wire one', serif;
+        font-weight:normal;
+    }
+    .skew-c{
+        width:100%;
+        height:50px;
+        position:absolute;
+        left:0px;
+        background: linear-gradient(to left bottom, #fff 49%, #000000 50%);
+    }
+
+    .skew-c-white{
+        width:100%;
+        height:50px;
+        position:absolute;
+        left:0px;
+        background: linear-gradient(to left bottom, #000 49%, #fff 50%);
+    }
+}
+
+/*.main {*/
+/*    margin-bottom: 200px;*/
+/*}*/
+
+
+.footer {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    background: black;
+    color: whitesmoke;
+    /*position: absolute;*/
+    /*bottom: 0;*/
+    width: 100%;
+}
+
+.footer a {
+    color: whitesmoke;
+}
+
+.footer a:hover {
+    color: grey;
 }
